[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-cache-proxy"
version = "0.1.0"
description = "Local SQLite cache for OpenAI and Anthropic API calls. One env var, 60-80% cheaper dev loops."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "yubinkim444" }]
keywords = ["llm", "cache", "proxy", "openai", "anthropic", "claude", "gpt", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.27",
]

[project.urls]
Homepage = "https://github.com/yubinkim444/llm-cache-proxy"
Repository = "https://github.com/yubinkim444/llm-cache-proxy"
Issues = "https://github.com/yubinkim444/llm-cache-proxy/issues"

[project.scripts]
llm-cache-proxy = "llm_cache_proxy.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_cache_proxy"]
